# custom-ompi-mca-modules

./: CMakeLists.txt  README.md
src/part_p2p/: CMakeLists.txt  part_p2p.c  part_p2p.h  part_p2p_component.c  part_p2p_component.h  part_p2p_request.c  part_p2p_request.h
test/: CMakeLists.txt  doctest_main.cpp  open_mpi_doctest_utils.h  wait_for_debugger.h
test/part_p2p/: CMakeLists.txt  mca_part_p2p_test.cpp
